--- a/statistics.html
+++ b/statistics.html
@@ -9,16 +9,24 @@
     <link rel="stylesheet" href="./css/standard.css">
     <script src="./js/standardMaps.js"></script>
     <script src="./js/main.js"></script>
-    
+
+
+    <link rel="apple-touch-icon" sizes="180x180" href="/img/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/img/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/img/favicon/favicon-16x16.png">
+    <link rel="manifest" href="/img/favicon/site.webmanifest">
+    <link rel="mask-icon" href="/img/favicon/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
 </head>
 <body>
     <div class="main-wrapper">
         <div class="heading">Statistik</div>
         <div class="statistics">
-            <div class="statisticValue" id="attempts">Versuche: 0</div>
-            <div class="statisticValue" id="jumps">Sprünge: 0</div>
-            <div class="statisticValue" id="timeSpend">Spielzeit: 0 Minuten</div>
-            <div class="statisticValue" id="distance_traveled">Blöcke gelaufen: 0</div>
+            <div class="statisticValue" id="attempts"></div>
+            <div class="statisticValue" id="jumps"></div>
+            <div class="statisticValue" id="timeSpend"></div>
+            <div class="statisticValue" id="distance_traveled"></div>
         </div>
         
                     <a href="./index.html" id="newGame" class="button">Hauptmenü</a>      
