--- a/game.html
+++ b/game.html
@@ -32,11 +32,11 @@
             </div>
             <div id="controls-container">
               <div id="controls">
-                <h1 id="controls-title" class="responsive-title">Steuerung:</h1>
+                <h1 id="controls-title" class="responsive-title">Controls:</h1>
                 <p id="controls-text" class="responsive-text">
-                  <span class="standard-font-color">Leertaste</span> oder <span class="standard-font-color">Pfeiltaste</span> nach oben zum springen oder <br>
-                  auf Mobilgeräten die <span class="standard-font-color">Springentaste</span> drücken<br>
-                  <span class="standard-font-color">R</span> drücken, um schnell neu zu starten<br>
+                  <span class="standard-font-color">Space</span> or <span class="standard-font-color">Arrow up</span> to jump or <br>
+                  on mobile devices press the <span class="standard-font-color">jump button</span><br>
+                  Press <span class="standard-font-color">R</span> to fast restart<br>
                 </p>
               </div>
             </div>
@@ -48,7 +48,7 @@
           </div>
         </div>
     </div>
-    <div id="back-button">← Zurück zum Hauptmenü</div>
+    <div id="back-button">← Back to the menu</div>
     <img src="./img/player.png" alt="" style="display: none;" id="player_image">
 </body>
 
