--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
     <div class="main-wrapper">
         <div class="heading">Geometriesprint</div>
             <div class="links">
-                    <div class="gradient-border"><a href="./newGame.html" id="newGame" class="button">Neues Spiel</a></div>
-                    <div class="gradient-border"><a href="./statistics.html" id="newGame" class="button">Statistik</a></div>
-                    <div class="gradient-border"><a href="./settings.html" id="newGame" class="button">Einstellungen</a></div>
+                    <div class="gradient-border"><a href="./newGame.html" id="newGame" class="button">New game</a></div>
+                    <div class="gradient-border"><a href="./statistics.html" id="newGame" class="button">Statistics</a></div>
+                    <div class="gradient-border"><a href="./settings.html" id="newGame" class="button">Settings</a></div>
                     <div class="gradient-border"><a href="./editor.html" id="newGame" class="button">Map-Editor</a></div>
             </div>
         </div>
