--- a/newGame.html
+++ b/newGame.html
@@ -21,7 +21,7 @@
     <body>
         <div class="main-wrapper">
             <div class="heading">
-                Neues Spiel
+                New game
             </div>
             <div class="startGameOrleave">
                 <div class="selectMap">
@@ -35,7 +35,7 @@
                     <button id="nextMap"></button>
                 </div>
                 <div class="buttons">
-                    <a href="./index.html" id="backToMenu" class="button">Hauptmenü</a>
+                    <a href="./index.html" id="backToMenu" class="button">Menu</a>
                     <a href="./game.html" id="startGame" class="button">Start</a>
                 </div>
             </div>   
