--- a/settings.html
+++ b/settings.html
@@ -35,36 +35,36 @@
                             </div> 
                         </div>
                         
-                    <div class="volumeText">Lautstärke</div>
+                    <div class="volumeText">Volume</div>
                 </div>
                 <div class="colorPicker">
                     <div class="primaryColorPicker">
                         <input type="color" id="primary-color-indicator" class="color-indicator" value="#FFFFFF">
-                        Primäre Farbe
+                        Primary Color
                     </div>
                     <div class="secondaryColorPicker">
                         <input type="color" id="secondary-color-indicator" class="color-indicator" value="#FFFFFF">
-                        Sekundäre Farbe
+                        Secondary Color
                     </div>
                     <div class="backgroundColorPicker">
                         <input type="color" id="background-color-indicator" class="color-indicator" value="#FFFFFF">
-                        Hintergrund
+                        Background
                     </div>
                 </div>
                 <div class="texturepack">
                     <label class="texturepackInput" id="customMap">
                         <input type="file" accept="image/*" id="textrurepackPicture">
-                        Spielerbild hochladen max: 512px*512px
+                        Upload player picture max: 512px*512px
                     </label>
                 </div>
                 <div class="particles">
                     <label class="particleInputState" id="particleState">
-                        Partikeleffekte: Viel
+                        particle effects: many
                     </label>
                 </div>
                 <div class="buttons">
-                    <a href="./index.html" id="reset" class="button">Abbrechen</a>
-                    <a href="./index.html" id="saveButton" class="button">Speichern</a>
+                    <a href="./index.html" id="reset" class="button">Discard</a>
+                    <a href="./index.html" id="saveButton" class="button">Save</a>
                 </div>
             </div>   
         </div>
