--- a/statistics.html
+++ b/statistics.html
@@ -21,7 +21,7 @@
 </head>
 <body>
     <div class="main-wrapper">
-        <div class="heading">Statistik</div>
+        <div class="heading">Statistics</div>
         <div class="statistics">
             <div class="statisticValue" id="attempts"></div>
             <div class="statisticValue" id="jumps"></div>
@@ -30,7 +30,7 @@
             <div class="statisticValue" id="distance_per_attempt"></div>
         </div>
         
-                    <a href="./index.html" id="newGame" class="button">Hauptmenü</a>      
+                    <a href="./index.html" id="newGame" class="button">Menu</a>      
         </div>
     </div>
 <script src="./js/statistics.js"></script>
